# onix-source

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: windows.yml
Source/: FrameReader.cpp  FrameReader.h  I2CRegisterContext.cpp  I2CRegisterContext.h  NeuropixComponents.cpp  NeuropixComponents.h  NeuropixelsComponents.h  Onix1.cpp  Onix1.h  OnixDevice.cpp  OnixDevice.h  OnixSource.cpp  OnixSource.h  OnixSourceCanvas.cpp  OnixSourceCanvas.h  OnixSourceEditor.cpp  OnixSourceEditor.h  OpenEphysLib.cpp  PortController.cpp  PortController.h
Source/Devices/: AnalogIO.cpp  AnalogIO.h  AuxiliaryIO.cpp  AuxiliaryIO.h  Bno055.cpp  Bno055.h  DS90UB9x.h  DeviceList.h  DigitalIO.cpp  DigitalIO.h  HarpSyncInput.cpp  HarpSyncInput.h  HeadStageEEPROM.cpp  HeadStageEEPROM.h  Heartbeat.cpp  Heartbeat.h  MemoryMonitor.cpp  MemoryMonitor.h  Neuropixels1.cpp  Neuropixels1.h  Neuropixels1e.cpp  Neuropixels1e.h  Neuropixels1f.cpp  Neuropixels1f.h  Neuropixels2e.cpp  Neuropixels2e.h  NeuropixelsProbeMetadata.cpp  NeuropixelsProbeMetadata.h  Neuropixels_1.cpp  Neuropixels_1.h  OutputClock.cpp  OutputClock.h  PersistentHeartbeat.cpp  PersistentHeartbeat.h  PolledBno055.cpp  PolledBno055.h  PortController.cpp  PortController.h
Source/Formats/: ProbeInterface.h
Source/Queue/: LICENSE.txt
Source/UI/: ActivityView.h  AnalogIOInterface.cpp  AnalogIOInterface.h  AuxiliaryIOInterface.cpp  AuxiliaryIOInterface.h  Bno055Interface.cpp  Bno055Interface.h  ColourScheme.cpp  ColourScheme.h  CustomTabButton.h  CustomTabComponent.h  CustomViewport.h  DigitalIOInterface.cpp  DigitalIOInterface.h  HarpSyncInputInterface.cpp  HarpSyncInputInterface.h  HeartbeatInterface.cpp  HeartbeatInterface.h  InterfaceList.h  MemoryMonitorInterface.cpp  MemoryMonitorInterface.h  NeuropixV1Interface.cpp  NeuropixV1Interface.h  NeuropixelsV1Interface.cpp  NeuropixelsV1Interface.h  NeuropixelsV1ProbeBrowser.h  NeuropixelsV1fInterface.cpp  NeuropixelsV1fInterface.h  NeuropixelsV1fProbeBrowser.h  NeuropixelsV2Interface.cpp  NeuropixelsV2Interface.h  NeuropixelsV2eInterface.cpp  NeuropixelsV2eInterface.h  NeuropixelsV2eProbeBrowser.h  NeuropixelsV2eProbeInterface.cpp  NeuropixelsV2eProbeInterface.h  OutputClockInterface.cpp  OutputClockInterface.h  PolledBno055Interface.cpp  PolledBno055Interface.h  (+5 more)
libONI/include/: oni.h  onidefs.h  onidriver.h  onix.h
libONI/osx/: liboni.dylib
libONI/win64/: liboni.lib  onidriver_riffa.lib  riffa.lib
